--- a/package.json
+++ b/package.json
@@ -2,17 +2,39 @@
   "name": "evan-sutherland-sdk",
   "version": "1.0.0",
   "description": "'Technical Assessment: Lord of the Rings Typescript SDK'",
-  "main": "lib/main.js",
+  "main": "./dist/evan-sutherland-sdk.umd.js",
+  "module": "./dist/evan-sutherland-sdk.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/evan-sutherland-sdk.mjs",
+      "require": "./dist/evan-sutherland-sdk.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/types/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/stackoverfloweth/evan-sutherland-SDK.git"
   },
   "author": "@stackoverfloweth",
   "license": "ISC",
+  "scripts": {
+    "dev": "tsc -w & tsc-alias -w & vite build -w",
+    "build": "tsc && tsc-alias && vite build",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
+  },
   "dependencies": {
     "axios": "^1.3.4"
   },
   "devDependencies": {
-    "@prefecthq/eslint-config": "^1.0.23"
+    "@prefecthq/eslint-config": "^1.0.23",
+    "@types/node": "^18.15.5",
+    "eslint": "^8.36.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.1"
   }
 }
