added vite env variable support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     ],
     "moduleResolution": "node",
     "outDir": "./dist/types/",
+    "types": ["vite/client"],
     "skipLibCheck": true,
     "strict": true,
     "importHelpers": true,
