--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.15.5",
     "eslint": "^8.36.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.4",
     "typescript": "^5.0.2",
     "vite": "^4.2.1"
   }
