--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evan-sutherland-sdk",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "'Technical Assessment: Lord of the Rings Typescript SDK'",
   "main": "./dist/evan-sutherland-sdk.umd.js",
   "module": "./dist/evan-sutherland-sdk.mjs",
@@ -23,16 +23,21 @@
   "scripts": {
     "dev": "tsc -w & tsc-alias -w & vite build -w",
     "build": "tsc && tsc-alias && vite build",
+    "preview": "vite preview --port 8080",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.3.4"
   },
   "devDependencies": {
     "@prefecthq/eslint-config": "^1.0.23",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
     "typescript": "^5.0.2",
